Changes in Version 0.2.1 (2019-xx-xx)
=====================================
datamodel
 - Allow access to attributes via "meta" property
irbempy
 - Fix compilation issues on certain systems
poppy
 - Fix bootstrapping when aggregating function has multiple outputs

Changes in Version 0.2.0 (2019-06-22)
=====================================
- Many installer updates, including binary wheels for Windows
- Fix writing of configuration file on Windows
ae9ap9
 - Fix handling of gzipped files under Windows/Python2
datamodel
 - Datatypes are now explicitly preserved by function "toRecArray"
irbempy
 - Update IRBEMlib to rev616
 - Update build for compatibility with numpy>=1.16 and GCC 8
 - Update retrieval of TS07 dynamic coefficient files
pybats
 - Many small changes and bugfixes (thanks John Haiducek)
 - Fix handling of gzipped files under Windows/Python2
pycdf
 - Proper handling of type guessing for negative integers, numpy scalars, and
   object arrays.
 - Allow ... to get all gEntries
 - Allow insert, append on gAttrs
 - Properly handle reading from empty variables
 - Fix some type-guessing ordering in Python 3.6
 - Reading empty NRV variables will now return empty array (not padding)
 - Fix more cases of BAD_ENTRY_NUM when reading attribute entries
 - Fix UTC-to-TT2000 conversions on ARM (thanks Rodrigue Piberne for the bug)
 - Speed up many operations by cacheing variable numbers. This is the biggest
   change to pycdf internals in several years; please report any bugs.
 - Fix TT2000-to-EPOCH16 conversions crashing in very rare cases.
 - Minimize setting/unsetting readonly mode, as this can be very slow.
 - Update for API changes in CDF library 3.7.1 (compatibility maintained
   with earlier versions)

Changes in Version 0.1.6 (2016-09-08)
=====================================
- Improvements to test suite (coverage and design)
coordinates
 - Bugfix to allow correct slicing behavior when Coords class has attached ticks
datamanager