@@ -6,6 +6,8 @@ irbempy
  - Fix compilation issues on certain systems
 poppy
  - Fix bootstrapping when aggregating function has multiple outputs
+pycdf
+ - Allow access to attributes via "meta" property
 
 Changes in Version 0.2.0 (2019-06-22)
 =====================================
